[tool.poetry]
name = "chaos-hr"
version = "0.1.0"
description = ""
authors = ["Ak Shanal <mshanalak@gmail.com>"]
packages = [{include = "horilla"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
django = "^5.1.6"
django-environ = "^0.12.0"
django-mathfilters = "^1.0.0"
django-cors-headers = "^4.7.0"
django-simple-history = "^3.8.0"
django-filter = "^25.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
