[tool.poetry]
name = "chaos-hr"
version = "0.1.0"
description = ""
authors = ["Ak Shanal <mshanalak@gmail.com>"]
packages = [{include = "horilla"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
django = "^5.1.6"
django-environ = "^0.12.0"
django-mathfilters = "^1.0.0"
django-cors-headers = "^4.7.0"
django-simple-history = "^3.8.0"
django-filter = "^25.1"
apscheduler = "^3.11.0"
python-dateutil = "^2.9.0.post0"
django-notifications-hq = "^1.8.3"
django-widget-tweaks = "^1.5.0"
django-apscheduler = "^0.7.0"
django-haystack = "^3.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
