[tool.poetry]
name = "chaos-hr"
version = "0.1.0"
description = ""
authors = ["Ak Shanal <mshanalak@gmail.com>"]
packages = [{include = "horilla"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
django = "4.2.11"
django-environ = "^0.12.0"
django-mathfilters = "^1.0.0"
django-cors-headers = "^4.7.0"
django-simple-history = "^3.8.0"
django-filter = "^25.1"
apscheduler = "^3.11.0"
python-dateutil = "^2.9.0.post0"
django-notifications-hq = "^1.8.3"
django-widget-tweaks = "^1.5.0"
django-apscheduler = "^0.7.0"
django-haystack = "^3.3.0"
django-auditlog = "^3.0.0"
djangorestframework = "^3.15.2"
arabic-reshaper = "^3.0.0"
asgiref = "^3.8.1"
asn1crypto = "^1.5.1"
bs4 = "^0.0.2"
certifi = "^2025.1.31"
cffi = "^1.17.1"
chardet = "^5.2.0"
charset-normalizer = "^3.4.1"
click = "^8.1.8"
cryptography = "^44.0.2"
cssselect2 = "^0.7.0"
django-import-export = "^4.3.7"
django-jsonfield = "^1.4.1"
django-microsoft-auth = "^3.0.1"
django-model-utils = "^5.0.0"
djangorestframework-simplejwt = "^5.5.0"
drf-yasg = "^1.21.9"
et-xmlfile = "^2.0.0"
google-api-python-client = "^2.162.0"
google-cloud-storage = "3.0.0"
html5lib = "^1.1"
jinja2 = "^3.1.5"
idna = "^3.10"
lxml = "^5.3.1"
numpy = "^2.2.3"
oauthlib = "^3.2.2"
openpyxl = "^3.1.5"
oscrypto = "^1.3.0"
pandas = "^2.2.3"
pdfkit = "^1.0.0"
pillow = "^11.1.0"
pycparser = "^2.22"
pyhanko = "^0.25.3"
pyhanko-certvalidator = "^0.26.5"
pymupdf = "1.24.5"
pypdf = "^5.3.1"
pypng = "^0.20220715.0"
python-bidi = "^0.6.6"
pytz = "^2025.1"
pyyaml = "^6.0.2"
pyzk = "0.9"
qrcode = "^8.0"
reportlab = "4.0.9"
requests = "^2.32.3"
responses = "^0.25.6"
setuptools = "^75.8.2"
six = "^1.17.0"
sqlparse = "^0.5.3"
svglib = "^1.5.1"
swapper = "^1.4.0"
tinycss2 = "^1.4.0"
typing-extensions = "^4.12.2"
tzdata = "^2025.1"
tzlocal = "^5.3"
uritools = "^4.0.3"
urllib3 = "^2.3.0"
utils = "^1.0.2"
webencodings = "^0.5.1"
whoosh = "^2.7.4"
xhtml2pdf = "^0.2.17"
xlsxwriter = "^3.2.2"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
whitenoise = "^6.9.0"
django-storages = "^1.14.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
